--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <section class="w-full h-screen flex flex-col flex-wrap	 justify-center dark:bg-slate-800">
+  <section class="w-full min-h-screen h-fit flex flex-col flex-wrap	 justify-center dark:bg-slate-800">
     <h1 class="font-bold text-2xl text-center dark:text-white">Cat Picture</h1>
-
-    <img alt="Random cat photo picture" class="w-2/4 h-fit mx-auto mt-4 border-none rounded-md bg-auto ">
 
     <button class="w-fit px-6 py-2 mx-auto my-4 rounded-full bg-emerald-400 text-white">New Image</button>
   </section>
