bibliteca de iconos feather, aplicar estilos hover sobre los iconos

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Cat 😺</title>
 </head>
-<body>
-    <section id="app">
-      <h1 class="name">Cat Pictures</h1>
 
-      <large-button action="Add favorite" icon="heart"></large-button>
-    </section>
+<body>
+  <section id="app">
+    <h1 class="name">Cat Pictures</h1>
+    <div class="test">
+      <large-button action="Add favorite"><i data-feather="heart" stroke="#71767B" slot="icon"></i></large-button>
+    </div>
+  </section>
 </body>
+
 </html>
