Contra photo component

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,12 @@
 <body>
   <section id="app">
     <h1 class="name">Cat Pictures</h1>
-    <div class="test">
-      <large-button action="Add favorite"><i data-feather="heart" stroke="#71767B" slot="icon"></i></large-button>
-    </div>
+    <section class="discover">
+      <div class="test">
+        <contra-photo url="https://randomfox.ca/images/71.jpg" alt="random cute fox"></contra-photo>
+        <large-button action="Add favorite"><i data-feather="heart" stroke="#71767B" slot="icon"></i></large-button>
+      </div>
+    </section>
   </section>
 </body>
 
