--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+  <header class="menu">
+    <nav class="nav">
+      <span class="nav-search"><i data-feather="search"></i><p>Discover</p></span>
+      <span class="nav-bookmark"><i data-feather="bookmark"></i><p>Favorites</p></span>
+    </nav>
+  </header>
   <section id="app">
     <h1 class="name">Cat Pictures</h1>
     <section class="discover">
