like-button component

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,13 @@
       <span class="nav-bookmark"><i data-feather="bookmark"></i><p>Favorites</p></span>
     </nav>
   </header>
+
   <section id="app">
     <h1 class="name">Cat Pictures</h1>
     <section class="discover">
-      <div class="test">
+      <div class="image">
         <contra-photo url="https://randomfox.ca/images/71.jpg" alt="random cute fox"></contra-photo>
-        <large-button action="Add favorite"><i data-feather="heart" stroke="#71767B" slot="icon"></i></large-button>
+        <like-button><i data-feather="heart" stroke="#71767B" slot="icon"></i></like-button>
       </div>
     </section>
   </section>
