--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,21 @@
 
 <body>
   <header class="menu">
+    <h1 class="name">Cat Pictures</h1>
     <nav class="nav">
-      <span class="nav-search"><i data-feather="search"></i><p>Discover</p></span>
-      <span class="nav-bookmark"><i data-feather="bookmark"></i><p>Favorites</p></span>
+      <span><i data-feather="search"></i><p>Discover</p></span>
+      <span><i data-feather="bookmark"></i><p>Favorites</p></span>
     </nav>
   </header>
 
   <section id="app">
-    <h1 class="name">Cat Pictures</h1>
-    <section class="discover">
+    <section id="discover">
       <div class="image">
         <contra-photo url="https://randomfox.ca/images/71.jpg" alt="random cute fox"></contra-photo>
         <like-button><i data-feather="heart" stroke="#71767B" slot="icon"></i></like-button>
       </div>
     </section>
+    <section id="favorites"></section>
   </section>
 </body>
-
 </html>
