Cambios del DOM en template.js

--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,10 @@
 
   <section id="app">
     <section id="discover">
-      <div class="image">
-        <contra-photo url="https://randomfox.ca/images/71.jpg" alt="random cute fox"></contra-photo>
-        <like-button><i data-feather="heart" stroke="#71767B" slot="icon"></i></like-button>
-      </div>
     </section>
-    <section id="favorites"></section>
+
+    <section id="favorites">
+    </section>
   </section>
 </body>
 </html>
