Subir foto a la API

--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,27 @@
     <h1 class="name">Cat Pictures</h1>
     <nav class="nav">
       <span><i data-feather="search"></i><p>Discover</p></span>
+      <span><i data-feather="plus-square"></i></span>
       <span><i data-feather="bookmark"></i><p>Favorites</p></span>
     </nav>
   </header>
 
   <section id="app">
+    <section id="upload">
+      <h2>Sube la foto de tu michi</h2>
+      <form id="uploadingForm" action="">
+        <input id="file" type="file" name="file">
+        <button class="uploadButton" type="button">Subir Foto</button>
+      </form>
+    </section>
+
     <section id="discover">
     </section>
+
 
     <section id="favorites">
     </section>
   </section>
+
 </body>
 </html>
