--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Cat 😺</title>
+  <title>Michi Moments 😺</title>
 </head>
 
 <body>
   <header class="menu">
-    <h1 class="name">Cat Pictures</h1>
+    <h1 class="name">Michi Moments</h1>
     <nav class="nav">
       <span><i data-feather="search"></i><p>Discover</p></span>
       <span><i data-feather="plus-square"></i></span>
