Probando meta-datos

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Michi Moments 😺</title>
+  <meta name="description" content="Descripción de tu página" />
+  <meta property="og:image" content="https://i.ibb.co/BgBdmss/michi-Moments-transformed.png" />
+  <meta property="og:title" content="Michi Moments" />
+  <meta property="og:description" content="Mira, guarda y publica fotos de Michis" />
 </head>
 
 <body>
